--- a/script.ipynb
+++ b/script.ipynb
@@ -43,100 +43,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-<<<<<<< HEAD
-      "Number of Sentences =  87\n",
-      "det DT nsubjpass NN auxpass VBZ ROOT VBN agent IN pobj PRP punct . \n",
-      "nsubj NN ROOT VBZ acomp JJ prep IN pobj PRP punct . \n",
-      "nsubjpass PRP auxpass VBZ ROOT VBN prep IN pobj PRP punct . \n",
-      "det DT nsubjpass NN auxpass VBZ ROOT VBN prep IN pobj NN punct . \n",
-      "nsubjpass NN auxpass VBZ ROOT VBN prep IN pobj NNS punct . \n",
-      "expl EX ROOT VBZ det DT amod JJ attr NN prep IN pobj NN acl VBN agent IN det DT compound NN pobj NNS punct . \n",
-      "nsubjpass PRP auxpass VBD ROOT VBN agent IN det DT pobj NN mark IN det DT nsubj NN ccomp VBD acomp JJ punct . \n",
-      "nsubjpass PRP auxpass VBD ROOT VBN agent IN poss PRP$ pobj NNS aux TO xcomp VB poss PRP$ dobj NN punct . \n",
-      "nsubj NNS ROOT VBP nsubj NNS ccomp VB mark IN nsubjpass JJS prep IN poss PRP$ pobj NNS cc CC conj NNS auxpass VBP ccomp VBN agent IN pobj NNS prep IN det DT pobj NN punct . \n",
-      "det DT amod VBN nsubjpass NN aux MD auxpass VB advmod RB ROOT VBN agent IN compound NN compound NNS pobj NNS punct . \n",
-      "amod JJ nsubjpass NNS punct , amod JJ conj NN punct , cc CC conj NNS auxpass VBP ROOT VBN agent IN det DT amod JJ pobj NNS punct . \n",
-      "prep IN det DT pobj NN punct , det DT amod JJ nsubj NN ROOT VBD acomp JJ aux TO xcomp VB det DT dobj NN prep IN amod JJ pobj NNS mark IN det DT amod JJ nsubjpass NNS auxpass VBD advmod RB advcl VBN agent IN pobj NNP punct . \n",
-      "advmod RB det DT nsubjpass NNS auxpass VBP ccomp VBN punct , advmod RB nsubjpass PRP auxpass VBP ROOT VBN punct , cc CC advmod RB nsubj PRP advmod VBP conj VBD cc CC conj VBN prep IN det DT pobj NN punct . \n",
-      "compound NNP nsubjpass NNP auxpass VBZ ROOT VBN det DT advmod RBS amod JJ nsubjpass NN prep IN det DT pobj NNP auxpass VBZ ccomp VBN mark IN compound NNP nmod NNP compound NNP nsubj NN ccomp VBD prep IN compound NNP pobj NNP punct . \n",
-      "nsubjpass NNP auxpass VBZ ROOT VBN prep IN pobj CD prep IN det DT compound NN pobj NNP advmod RBS amod JJ appos NNS aux TO relcl VB punct . \n",
-      "compound NN nsubjpass NNS auxpass VBP ROOT VBN aux TO auxpass VB xcomp VBN agent IN amod JJ pobj NN prep IN det DT pobj NN punct . \n",
-      "compound NNP nsubjpass NNP auxpass VBD ROOT VBN nsubjpass NN prep IN pobj CD pobj NNS auxpass VBD relcl VBN prep IN det DT pobj NN punct HYPH prt NN pobj VBG prep IN compound NNP pobj NN punct . \n",
-      "nummod CD nsubjpass NNS auxpass VBD ROOT VBN advmod WRB nsubj NN prep IN det DT compound NN pobj NN advcl VBD punct . \n",
-      "nsubjpass PRP auxpass VBD ROOT VBN agent IN det DT pobj NN punct . \n",
-      "det DT nsubjpass NN aux VBZ auxpass VBN ROOT VBN agent IN det DT nmod NN nummod NNP amod JJ pobj NN punct . \n",
-      "advmod WRB poss PRP$ nsubjpass NN auxpass VBD advcl VBN punct , nsubj NNP ROOT VBD aux TO xcomp VB prep IN pobj NNS aux TO relcl VB poss PRP$ dobj NN punct . \n",
-      "det DT amod JJ nsubjpass NN prep IN compound NN compound NN pobj NNS auxpass VBD ROOT VBN prt RP punct . \n",
-      "compound NN nsubjpass NN auxpass VBZ ROOT VBN det DT amod JJ oprd NN prep IN pobj NN prep IN det DT compound NNP pobj NNP punct . \n",
-      "det DT nsubjpass NN auxpass VBZ ROOT VBN prep IN det DT pobj NN prep IN pobj NN cc CC auxpass VBZ conj JJ punct . \n",
-      "det DT compound NNP nsubj NNP ROOT VBZ mark IN det DT amod JJ nsubj NNS aux MD aux VB ccomp VBN nummod NNP attr NNS auxpass VBP ccomp VBN aux TO xcomp VB det DT dobj NN punct . \n",
-      "quantmod IN nummod CD amod JJ nsubjpass NNS aux VBP auxpass VBN ROOT VBN prep IN det DT pobj NN punct . \n",
-      "compound NNP nsubjpass NNP auxpass VBD ROOT VBN prep IN nummod CD pobj NN npadvmod NN punct . \n",
-      "det DT nsubjpass NNS auxpass VBP ROOT VBN agent IN pobj NNP punct . \n",
-      "det DT nsubjpass NNS auxpass VBD ROOT VBN agent IN pobj NNP punct . \n",
-      "det DT nsubjpass NNS aux VBP auxpass VBG ROOT VBN agent IN pobj NNP punct . \n",
-      "det DT nsubjpass NNS aux VBP auxpass VBN ROOT VBN agent IN pobj NNP punct . \n",
-      "det DT nsubj NNS aux VBP ROOT VBG aux TO auxpass VB xcomp VBN agent IN pobj NNP punct . \n",
-      "det DT nsubjpass NNS aux MD auxpass VB ROOT VBN agent IN pobj NNP punct . \n",
-      "det DT nsubjpass NNS aux VBD auxpass VBG ROOT VBN agent IN pobj NNP punct . \n",
-      "det DT nsubjpass NN aux VBD auxpass VBN ROOT VBN punct , cc CC nsubj PRP conj VBD advmod RB acomp JJ punct . \n",
-      "det DT nsubjpass NN aux MD aux VB auxpass VBN ROOT VBN agent IN pcomp RB punct . \n",
-      "nsubjpass NNS auxpass VBD ROOT VBN punct . \n",
-      "det DT nsubjpass NN auxpass VBZ ROOT VBN prep IN det DT pobj NN punct . \n",
-      "poss PRP$ nsubjpass NN aux VBZ auxpass VBG ROOT VBN oprd JJ punct . \n",
-      "poss NNP case POS nsubjpass NN auxpass VBD ROOT VBN advmod RB punct . \n",
-      "det DT nsubjpass NN aux VBD auxpass VBG ROOT VBN dative IN pobj PRP punct . \n",
-      "predet DT poss PRP$ amod JJ nsubjpass NNS aux VBP auxpass VBN ROOT VBN punct . \n",
-      "poss PRP$ compound NN nsubjpass NN aux VBD auxpass VBN ROOT VBN prt RP prep IN det DT pobj NN punct . \n",
-      "det DT nsubjpass NN aux MD auxpass VB ROOT VBN punct . \n",
-      "mark IN nsubj PRP advcl VBD dobj PRP punct , poss PRP$ nsubjpass NN aux MD auxpass VB ROOT VBN punct . \n",
-      "poss PRP$ nsubjpass NN aux MD aux VB auxpass VBN ROOT VBN advmod RB mark IN nsubj PRP aux VBD advcl VBN dobj PRP prep IN pobj PRP punct . \n",
-      "det DT nsubj NN ROOT VBZ aux TO auxpass VB xcomp VBN punct . \n",
-      "det DT nsubj JJ ROOT VBD acomp JJ aux TO aux VB auxpass VBN xcomp VBN punct . \n",
-      "nsubj PRP ROOT VBP det DT dobj NN mark IN det DT nsubjpass NN aux MD aux VB auxpass VBG acl VBN punct . \n",
-      "det DT nsubjpass NN punct , aux VBG auxpass VBN ccomp VBN prep IN det DT pobj NN prep IN advmod RB pcomp RB punct , aux MD neg RB ROOT VB prep IN det DT pobj NN punct . \n",
-      "det DT nsubjpass NN aux MD auxpass VB ROOT VBN agent IN pobj PRP det DT npadvmod NN punct . \n",
-      "aux MD det DT nsubjpass NN auxpass VB csubjpass VBN agent IN nummod CD pobj NN aux MD auxpass VB ROOT VBN agent IN pobj PRP punct . \n",
-      "aux MD det DT nsubjpass NN auxpass VB ROOT VBN agent IN compound , pobj NN aux MD neg RB auxpass VB conj VBN agent IN pobj PRP punct . \n",
-      "poss PRP$ nsubjpass NN aux MD auxpass VB ROOT VBN agent IN pobj PRP prep IN det DT pobj NN punct . \n",
-      "det DT nsubjpass NN aux MD neg RB auxpass VB ROOT VBN agent IN pobj NNP det DT npadvmod NN punct . \n",
-      "nsubjpass NNP aux MD auxpass VB ROOT VBN agent IN pobj PRP punct . \n",
-      "nsubjpass NN aux MD neg RB auxpass VB ROOT VBN oprd NNS punct . \n",
-      "prep IN pobj NN punct , nummod CD nsubjpass NN auxpass VBD ROOT VBN agent IN pobj NNP punct . \n",
-      "det DT nsubjpass NN auxpass VBZ ROOT VBN agent IN amod JJ pobj NN punct . \n",
-      "det DT amod JJ nsubjpass NN auxpass VBD ROOT VBN agent IN pobj NNP punct . \n",
-      "det DT nsubj NN aux VBZ ROOT VBG aux TO auxpass VB xcomp VBN agent IN pobj PRP npadvmod NN punct . \n",
-      "det DT compound NN nsubjpass NN auxpass VBD ROOT VBN agent IN pobj PRP prep IN compound NN pobj NN punct . \n",
-      "det DT amod JJ nsubjpass NN prep IN pobj NN auxpass VBD ROOT VBN agent IN det DT pobj NN punct . \n",
-      "det DT nsubjpass NN auxpass VBD ROOT VBN agent IN pobj NNP prep IN nummod CD pobj NN punct . \n",
-      "det DT amod JJ nsubjpass NN auxpass VBD ROOT VBN agent IN det DT pobj NN punct . \n",
-      "det DT nsubjpass NN aux MD auxpass VB ROOT VBN agent IN pobj PRP det DT npadvmod NNP punct . \n",
-      "det DT compound NN nsubjpass NN aux MD auxpass VB ROOT VBN agent IN det DT pobj NN det DT npadvmod NN punct . \n",
-      "det DT nsubjpass NN prep IN det DT amod JJ pobj NN auxpass VBD ROOT VBN agent IN pobj PRP punct . \n",
-      "det DT amod JJ nsubjpass NN auxpass VBD ROOT VBN agent IN pobj NNP punct . \n",
-      "det DT nsubjpass NNS compound POS nsubjpass NNS auxpass VBP advmod RB ROOT VBN agent IN det DT pobj NN punct . \n",
-      "det DT nsubjpass NN auxpass VBZ advmod RB ROOT VBN agent IN det DT pobj NN punct . \n",
-      "prep IN pobj WP auxpass VBD nsubj PRP ROOT VBN prep IN det DT amod JJ nsubjpass NN auxpass VBD ccomp VBN agent IN det DT compound NN pobj NN punct . \n",
-      "det DT nsubjpass NN aux VBZ auxpass VBG ROOT VBN agent IN det DT nummod CD pobj NNS punct . \n",
-      "det DT npadvmod NN det DT nsubjpass NN auxpass VBZ ROOT VBN cc CC conj VBN agent IN det DT compound NN pobj NN punct . \n",
-      "nsubjpass NN auxpass VBD advmod RB ROOT VBN prep IN det DT amod JJ pobj NN agent IN pobj NNP punct . \n",
-      "poss PRP$ compound NNS nsubjpass NN auxpass VBD neg RB ROOT VBN prep IN agent IN pobj NN punct . \n",
-      "predet PDT det DT nsubjpass NNS aux MD auxpass VB ROOT VBN agent IN det DT compound NN pobj NN punct . \n",
-      "prep IN det DT compound NN pobj NN punct , nummod CD compound NN nsubjpass NNS aux MD auxpass VB ROOT VBN agent IN pobj NNP punct . \n",
-      "det DT nsubjpass NN auxpass VBD ROOT VBN agent IN det DT compound NN pobj NN punct . \n",
-      "det DT nsubjpass NN auxpass VBD ROOT VBN prep IN pobj NNP agent IN pobj NNP punct . \n",
-      "nsubjpass NNS aux MD auxpass VB ROOT VBN dative IN pobj PRP agent IN det DT pobj NN punct . \n",
-      "det DT compound NNP nsubjpass NNP auxpass VBZ ROOT VBN agent IN pobj NNS prep IN pobj NNS det DT npadvmod NN punct . \n",
-      "det DT nsubjpass NN auxpass VBD ROOT VBN agent IN det DT pobj NNS aux TO xcomp VB nsubj PRP ccomp VB punct . \n",
-      "det DT nsubjpass NN aux MD auxpass VB ROOT VBN agent IN det DT pobj NN npadvmod NN punct . \n",
-      "det DT compound NN nsubjpass NNS auxpass VBD advmod RB ROOT VBN agent IN det DT pobj NN punct . \n",
-      "det DT nsubjpass NN auxpass VBD ROOT VBN agent IN det DT pobj NN prep IN poss PRP$ pobj NN punct . \n",
-      "det DT amod JJ nsubjpass NN auxpass VBD ROOT VBN agent IN pobj WP punct . \n",
-      "66\n"
-=======
       "The number of sentences found:  0\n",
       "Active\n"
->>>>>>> 9d4858267590ad8d18da98c09bb4b10db005d681
      ]
     }
    ],
@@ -391,21 +299,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'keras'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-3fefb19146bd>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mcytoolz\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 23\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmodels\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mSequential\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmodel_from_json\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     24\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlayers\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mLSTM\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mDense\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mEmbedding\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mBidirectional\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlayers\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mTimeDistributed\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'keras'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "This example shows how to use an LSTM sentiment classification model trained\n",
@@ -677,76 +573,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "lenght is low\n",
-      "lenght is low\n",
-      "lenght is low\n",
-      "lenght is low\n",
-      "lenght is low\n",
-      "lenght is low\n",
-      "length is medium\n",
-      "length is medium\n",
-      "lenght is low\n",
-      "lenght is low\n",
-      "lenght is low\n",
-      "lenght is low\n",
-      "length is medium\n",
-      "length is high\n",
-      "lenght is low\n",
-      "lenght is low\n",
-      "lenght is low\n",
-      "lenght is low\n",
-      "lenght is low\n",
-      "lenght is low\n",
-      "lenght is low\n",
-      "length is medium\n",
-      "length is medium\n",
-      "lenght is low\n",
-      "lenght is low\n",
-      "lenght is low\n",
-      "lenght is low\n",
-      "lenght is low\n",
-      "lenght is low\n",
-      "lenght is low\n",
-      "length is medium\n",
-      "lenght is low\n",
-      "lenght is low\n",
-      "lenght is low\n",
-      "length is medium\n",
-      "length is medium\n",
-      "lenght is low\n",
-      "length is high\n",
-      "lenght is low\n",
-      "length is medium\n",
-      "length is medium\n"
-     ]
-    }
-   ],
    "source": [
-    "import spacy\n",
-    "nlp=spacy.load(\"en_core_web_sm\")\n",
-    "myfile=(open('examplefile.txt' ,encoding=\"utf8\")).read()\n",
-    "doc_file=nlp(myfile)\n",
-    "def calcVerb(sente):\n",
-    "    c=0\n",
-    "    for word in sente:\n",
-    "        if(word.pos_=='VERB'):\n",
-    "            c=c+1\n",
-    "    if(c<3):\n",
-    "        print(\"lenght is low\")\n",
-    "    elif(c<6):\n",
-    "        print(\"length is medium\")\n",
-    "    else:\n",
-    "        print(\"length is high\")\n",
-    "for num,sent in enumerate(doc_file.sents):\n",
-    "    calcVerb(sent)"
+    "## Nonsense"
    ]
   },
   {
@@ -773,7 +603,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8rc1"
   }
  },
  "nbformat": 4,
