--- a/script.ipynb
+++ b/script.ipynb
@@ -581,6 +581,79 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 : length is low\n",
+      "1 : length is low\n",
+      "2 : length is low\n",
+      "3 : length is low\n",
+      "4 : length is low\n",
+      "5 : length is low\n",
+      "6 : length is medium\n",
+      "7 : length is medium\n",
+      "8 : length is low\n",
+      "9 : length is low\n",
+      "10 : length is low\n",
+      "11 : length is low\n",
+      "12 : length is medium\n",
+      "13 : length is high\n",
+      "14 : length is low\n",
+      "15 : length is low\n",
+      "16 : length is low\n",
+      "17 : length is low\n",
+      "18 : length is low\n",
+      "19 : length is low\n",
+      "20 : length is low\n",
+      "21 : length is medium\n",
+      "22 : length is medium\n",
+      "23 : length is low\n",
+      "24 : length is low\n",
+      "25 : length is low\n",
+      "26 : length is low\n",
+      "27 : length is low\n",
+      "28 : length is low\n",
+      "29 : length is low\n",
+      "30 : length is medium\n",
+      "31 : length is low\n",
+      "32 : length is low\n",
+      "33 : length is low\n",
+      "34 : length is medium\n",
+      "35 : length is medium\n",
+      "36 : length is low\n",
+      "37 : length is high\n",
+      "38 : length is low\n",
+      "39 : length is medium\n",
+      "40 : length is medium\n"
+     ]
+    }
+   ],
+   "source": [
+    "import spacy\n",
+    "nlp=spacy.load(\"en_core_web_sm\")\n",
+    "myfile=(open('examplefile.txt' ,encoding=\"utf8\")).read()\n",
+    "doc_file=nlp(myfile)\n",
+    "def calcVerb(num,sente):\n",
+    "    c=0\n",
+    "    for word in sente:\n",
+    "        if(word.pos_=='VERB'):\n",
+    "            c=c+1\n",
+    "    if(c<3):\n",
+    "        print(num,\":\",\"length is low\")\n",
+    "    elif(c<6):\n",
+    "        print(num,\":\",\"length is medium\")\n",
+    "    else:\n",
+    "        print(num,\":\",\"length is high\")\n",
+    "for num,sent in enumerate(doc_file.sents):\n",
+    "    calcVerb(num,sent)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -603,7 +676,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8rc1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
