--- a/script.ipynb
+++ b/script.ipynb
@@ -23,6 +23,171 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 1. Length"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0: Nice Place!\n",
+      "length is low\n",
+      "1: The room was nice/clean.\n",
+      "length is low\n",
+      "2: The location was great-connected to the mall.\n",
+      "length is low\n",
+      "3: The lobby was a bit congested and loud.\n",
+      "length is low\n",
+      "4: Great Hotel/Location\n",
+      "length is low\n",
+      "5: I got a great rate on priceline for this hotel.\n",
+      "length is low\n",
+      "6: Because I am a frequent Starwood (Shertaon Hotel Chain) guest, we were assigned a room in the North Tower for the Starwood Preferred Guests.\n",
+      "length is medium\n",
+      "7: The hallways don't look in very good shape, but the room was large, clean, and very comfortable.\n",
+      "length is medium\n",
+      "8: The hotel is well situated.\n",
+      "length is low\n",
+      "9: You can eat in the Prudential Center mall at the Au Bon Pan or the Marche for breakfast.\n",
+      "length is low\n",
+      "10: Much cheaper than in the hotel.\n",
+      "length is low\n",
+      "11: Plus, the mall has Legal Seafoods - one of the best seafood restaurants in Boston.\n",
+      "length is low\n",
+      "12: You can get to the T (Prudential Center) stop without going outside.\n",
+      "length is medium\n",
+      "13: The Upscale shops on Boylston is very close and the Boston Common is about one mile walk if you don't want to take the T.I would stay there again at twice the price.\n",
+      "length is high\n",
+      "14: Good location!\n",
+      "length is low\n",
+      "15: We stayed in this hotel on Aug 23-25 and Sept 6-7 again due to some business.\n",
+      "length is low\n",
+      "16: The first time we stayed in the North Tower with 2 double beds.\n",
+      "length is low\n",
+      "17: The room is very nice and the washroom is a bit old.\n",
+      "length is low\n",
+      "18: We asked for the south tower the second time after seeing the other's comments on tripadvisor.\n",
+      "length is low\n",
+      "19: Again we have 2 double beds and the room is a bit larger that the one in North tower.\n",
+      "length is low\n",
+      "20: The bathroom is new except the bathtub and the wall tile (They must want to save money by renovating only half of the bathroom).\n",
+      "length is medium\n",
+      "21: Overall, the north tower has nicer elevator and hallways, but the size of the room can vary.\n",
+      "length is medium\n",
+      "22: It is a nice hotel at a good location.\n",
+      "length is low\n",
+      "23: Nice hotel cons: parking is pricey (separate from hotel).\n",
+      "length is low\n",
+      "24: Service is typical of huge convention style hotel.\n",
+      "length is low\n",
+      "25: Pool/fitness center requires fee and looks pretty crowded.\n",
+      "length is low\n",
+      "26: Pros: good location.\n",
+      "length is low\n",
+      "27: Right next to big mall with nice stores and food.\n",
+      "length is low\n",
+      "28: Walking distance to Newbury street (great stores, and food - high end).\n",
+      "length is low\n",
+      "29: Very close to Charles R., and MIT/Harvard - good for a morning jog from the hotel)!\n",
+      "length is low\n",
+      "30: Decent expedia pricing.\n",
+      "length is low\n",
+      "31: Quilt and linens were new, but room itself had a dated look.\n",
+      "length is medium\n",
+      "32: 1King room itself is quite large.\n",
+      "length is low\n",
+      "33: Definitely a high usage place as nothing is really super-clean.\n",
+      "length is low\n",
+      "34: One of the worst I stayed at this hotel for a conference in June 03.\n",
+      "length is low\n",
+      "35: The first room I got, which was tiny, had a broken toilet.\n",
+      "length is medium\n",
+      "36: When I attempted to call the front desk I discovered the phones didn't work!\n",
+      "length is medium\n",
+      "37: The second room I got still had problems.\n",
+      "length is low\n",
+      "38: The cold-water faucet in the bathroom sink didn't work, the towel rack in the bathroom had fallen off the wall and was lying on the floor under the sink, there were suspicious stains on the comforter, all the channels on the TV were fuzzy and the Internet connection was flaky (they actually tried to bill me for a service I didn't use).\n",
+      "length is high\n",
+      "39: The service staff was slow to respond and down right rude in some cases.\n",
+      "length is low\n",
+      "40: Finally it's been two months and they won't credit me the airline miles for my stay.\n",
+      "length is medium\n",
+      "41: This was one of the worst hotels I've ever had the misfortune to stay at.\n",
+      "length is medium\n"
+     ]
+    }
+   ],
+   "source": [
+    "def calcVerb(num, sent):\n",
+    "    c=0\n",
+    "    for word in sent:\n",
+    "        if(word.pos_=='VERB'):\n",
+    "            c=c+1\n",
+    "    if(c<3):\n",
+    "        print(\"length is low\")\n",
+    "    elif(c<6):\n",
+    "        print(\"length is medium\")\n",
+    "    else:\n",
+    "        print(\"length is high\")\n",
+    "\n",
+    "text = \"Nice Place! The room was nice/clean.\\\n",
+    "The location was great-connected to the mall.\\\n",
+    "The lobby was a bit congested and loud.\\\n",
+    "Great Hotel/Location I got a great rate on priceline for this hotel.\\\n",
+    "Because I am a frequent Starwood (Shertaon Hotel Chain) guest, we were assigned a room in the North Tower for the Starwood Preferred Guests.\\\n",
+    "The hallways don't look in very good shape, but the room was large, clean, and very comfortable.\\\n",
+    "The hotel is well situated.\\\n",
+    "You can eat in the Prudential Center mall at the Au Bon Pan or the Marche for breakfast.\\\n",
+    "Much cheaper than in the hotel.\\\n",
+    "Plus, the mall has Legal Seafoods - one of the best seafood restaurants in Boston.\\\n",
+    "You can get to the T (Prudential Center) stop without going outside.\\\n",
+    "The Upscale shops on Boylston is very close and the Boston Common is about one mile walk if you don't want to take the T.\\\n",
+    "I would stay there again at twice the price. Good location! \\\n",
+    "We stayed in this hotel on Aug 23-25 and Sept 6-7 again due to some business.\\\n",
+    "The first time we stayed in the North Tower with 2 double beds.\\\n",
+    "The room is very nice and the washroom is a bit old. We asked for the south tower the second time after seeing the other's comments on tripadvisor.\\\n",
+    "Again we have 2 double beds and the room is a bit larger that the one in North tower.\\\n",
+    "The bathroom is new except the bathtub and the wall tile \\\n",
+    "(They must want to save money by renovating only half of the bathroom). \\\n",
+    "Overall, the north tower has nicer elevator and hallways, but the size of the room can vary.\\\n",
+    "It is a nice hotel at a good location.\\\n",
+    "Nice hotel cons: parking is pricey (separate from hotel). \\\n",
+    "Service is typical of huge convention style hotel.\\\n",
+    "Pool/fitness center requires fee and looks pretty crowded.\\\n",
+    "Pros: good location. Right next to big mall with nice stores and food.\\\n",
+    "Walking distance to Newbury street (great stores, and food - high end). \\\n",
+    "Very close to Charles R., and MIT/Harvard - good for a morning jog from the hotel)! \\\n",
+    "Decent expedia pricing.\\\n",
+    "Quilt and linens were new, but room itself had a dated look. \\\n",
+    "1King room itself is quite large.\\\n",
+    "Definitely a high usage place as nothing is really super-clean.\\\n",
+    "One of the worst I stayed at this hotel for a conference in June 03. \\\n",
+    "The first room I got, which was tiny, had a broken toilet.\\\n",
+    "When I attempted to call the front desk I discovered the phones didn't work! \\\n",
+    "The second room I got still had problems.\\\n",
+    "The cold-water faucet in the bathroom sink didn't work, the towel rack in the bathroom had fallen off the wall and was lying on the floor under the sink, there were suspicious stains on the comforter, all the channels on the TV were fuzzy and the Internet connection was flaky (they actually tried to bill me for a service I didn't use). \\\n",
+    "The service staff was slow to respond and down right rude in some cases.\\\n",
+    "Finally it's been two months and they won't credit me the airline miles for my stay.\\\n",
+    "This was one of the worst hotels I've ever had the misfortune to stay at.\"\n",
+    "\n",
+    "doc = nlp(text)\n",
+    "        \n",
+    "for num,sentence in enumerate(doc.sents):\n",
+    "    print(f'{num}: {sentence}')\n",
+    "    calcVerb(num,sentence)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 3. Voice \n",
     "> (incomplete)\n",
     "\n",
@@ -288,163 +453,6 @@
     "assert doc[5]._.emoji_desc == u'thumbs up dark skin tone'\n",
     "assert len(doc._.emoji) == 2\n",
     "assert doc._.emoji[1] == (u'👍🏿', 5, u'thumbs up dark skin tone')\"\"\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 1. Length"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0: Nice Place!\n",
-      "length is low\n",
-      "1: The room was nice/clean.\n",
-      "length is low\n",
-      "2: The location was great-connected to the mall.\n",
-      "length is low\n",
-      "3: The lobby was a bit congested and loud.\n",
-      "length is low\n",
-      "4: Great Hotel/Location\n",
-      "length is low\n",
-      "5: I got a great rate on priceline for this hotel.\n",
-      "length is low\n",
-      "6: Because I am a frequent Starwood (Shertaon Hotel Chain) guest, we were assigned a room in the North Tower for the Starwood Preferred Guests.\n",
-      "length is medium\n",
-      "7: The hallways don't look in very good shape, but the room was large, clean, and very comfortable.\n",
-      "length is medium\n",
-      "8: The hotel is well situated.\n",
-      "length is low\n",
-      "9: You can eat in the Prudential Center mall at the Au Bon Pan or the Marche for breakfast.\n",
-      "length is low\n",
-      "10: Much cheaper than in the hotel.\n",
-      "length is low\n",
-      "11: Plus, the mall has Legal Seafoods - one of the best seafood restaurants in Boston.\n",
-      "length is low\n",
-      "12: You can get to the T (Prudential Center) stop without going outside.\n",
-      "length is medium\n",
-      "13: The Upscale shops on Boylston is very close and the Boston Common is about one mile walk if you don't want to take the T.I would stay there again at twice the price.\n",
-      "length is high\n",
-      "14: Good location !\n",
-      "length is low\n",
-      "15: We stayed in this hotel on Aug 23-25 and Sept 6-7 again due to some business.\n",
-      "length is low\n",
-      "16: The first time we stayed in the North Tower with 2 double beds.\n",
-      "length is low\n",
-      "17: The room is very nice and the washroom is a bit old.\n",
-      "length is low\n",
-      "18: We asked for the south tower the second time after seeing the other's comments on tripadvisor.\n",
-      "length is low\n",
-      "19: Again we have 2 double beds and the room is a bit larger that the one in North tower.\n",
-      "length is low\n",
-      "20: The bathroom is new except the bathtub and the wall\n",
-      "length is low\n",
-      "21: tile.(They must want to save money by renovating only half of the bathroom).Overall, the north tower has nicer elevator and hallways, but the size of the room can vary.\n",
-      "length is high\n",
-      "22: It is a nice hotel at a good location.\n",
-      "length is low\n",
-      "23: Nice hotel cons: parking is pricey (separate from hotel).Service is typical of huge convention style hotel.\n",
-      "length is low\n",
-      "24: Pool/fitness center requires fee and looks pretty crowded.\n",
-      "length is low\n",
-      "25: Pros: good location.\n",
-      "length is low\n",
-      "26: Right next to big mall with nice stores and food.\n",
-      "length is low\n",
-      "27: Walking distance to Newbury street (great stores, and food - high end).Very close to Charles R., and MIT/Harvard - good for a morning jog from the hotel)!Decent expedia pricing.\n",
-      "length is low\n",
-      "28: Quilt and linens were new, but room itself had a dated look.1King room itself is quite large.\n",
-      "length is medium\n",
-      "29: Definitely a high usage place as nothing is really super-clean.\n",
-      "length is low\n",
-      "30: One of the worst I stayed at this hotel for a conference in June 03.The\n",
-      "length is low\n",
-      "31: first room I got, which was tiny, had a broken toilet.\n",
-      "length is medium\n",
-      "32: When I attempted to call the front desk I discovered the phones didn't work!\n",
-      "length is medium\n",
-      "33: The second room I got still had problems.\n",
-      "length is low\n",
-      "34: The cold-water faucet in the bathroom sink didn't work, the towel rack in the bathroom had fallen off the wall and was lying on the floor under the sink, there were suspicious stains on the comforter, all the channels on the TV were fuzzy and the Internet connection was flaky (they actually tried to bill me for a service I didn't use).\n",
-      "length is high\n",
-      "35: The service staff was slow to respond and down right rude in some cases.\n",
-      "length is low\n",
-      "36: Finally it's been two months and they won't credit me the airline miles for my stay.\n",
-      "length is medium\n",
-      "37: This was one of the worst hotels I've ever had the misfortune to stay at.\n",
-      "length is medium\n"
-     ]
-    }
-   ],
-   "source": [
-    "def calcVerb(num, sent):\n",
-    "    c=0\n",
-    "    for word in sent:\n",
-    "        if(word.pos_=='VERB'):\n",
-    "            c=c+1\n",
-    "    if(c<3):\n",
-    "        print(\"length is low\")\n",
-    "    elif(c<6):\n",
-    "        print(\"length is medium\")\n",
-    "    else:\n",
-    "        print(\"length is high\")\n",
-    "\n",
-    "text = \"Nice Place! The room was nice/clean.\\\n",
-    "The location was great-connected to the mall.\\\n",
-    "The lobby was a bit congested and loud.\\\n",
-    "Great Hotel/Location I got a great rate on priceline for this hotel.\\\n",
-    "Because I am a frequent Starwood (Shertaon Hotel Chain) guest, we were assigned a room in the North Tower for the Starwood Preferred Guests.\\\n",
-    "The hallways don't look in very good shape, but the room was large, clean, and very comfortable.\\\n",
-    "The hotel is well situated.\\\n",
-    "You can eat in the Prudential Center mall at the Au Bon Pan or the Marche for breakfast.\\\n",
-    "Much cheaper than in the hotel.\\\n",
-    "Plus, the mall has Legal Seafoods - one of the best seafood restaurants in Boston.\\\n",
-    "You can get to the T (Prudential Center) stop without going outside.\\\n",
-    "The Upscale shops on Boylston is very close and the Boston Common is about one mile walk if you don't want to take the T.\\\n",
-    "I would stay there again at twice the price. Good location !\\\n",
-    "We stayed in this hotel on Aug 23-25 and Sept 6-7 again due to some business.\\\n",
-    "The first time we stayed in the North Tower with 2 double beds.\\\n",
-    "The room is very nice and the washroom is a bit old. We asked for the south tower the second time after seeing the other's comments on tripadvisor.\\\n",
-    "Again we have 2 double beds and the room is a bit larger that the one in North tower.\\\n",
-    "The bathroom is new except the bathtub and the wall tile.\\\n",
-    "(They must want to save money by renovating only half of the bathroom).\\\n",
-    "Overall, the north tower has nicer elevator and hallways, but the size of the room can vary.\\\n",
-    "It is a nice hotel at a good location.\\\n",
-    "Nice hotel cons: parking is pricey (separate from hotel).\\\n",
-    "Service is typical of huge convention style hotel.\\\n",
-    "Pool/fitness center requires fee and looks pretty crowded.\\\n",
-    "Pros: good location. Right next to big mall with nice stores and food.\\\n",
-    "Walking distance to Newbury street (great stores, and food - high end).\\\n",
-    "Very close to Charles R., and MIT/Harvard - good for a morning jog from the hotel)!\\\n",
-    "Decent expedia pricing.\\\n",
-    "Quilt and linens were new, but room itself had a dated look.\\\n",
-    "1King room itself is quite large.\\\n",
-    "Definitely a high usage place as nothing is really super-clean.\\\n",
-    "One of the worst I stayed at this hotel for a conference in June 03.\\\n",
-    "The first room I got, which was tiny, had a broken toilet.\\\n",
-    "When I attempted to call the front desk I discovered the phones didn't work! \\\n",
-    "The second room I got still had problems.\\\n",
-    "The cold-water faucet in the bathroom sink didn't work, the towel rack in the bathroom had fallen off the wall and was lying on the floor under the sink, there were suspicious stains on the comforter, all the channels on the TV were fuzzy and the Internet connection was flaky (they actually tried to bill me for a service I didn't use). \\\n",
-    "The service staff was slow to respond and down right rude in some cases.\\\n",
-    "Finally it's been two months and they won't credit me the airline miles for my stay.\\\n",
-    "This was one of the worst hotels I've ever had the misfortune to stay at.\"\n",
-    "\n",
-    "doc = nlp(text)\n",
-    "        \n",
-    "for num,sentence in enumerate(doc.sents):\n",
-    "    print(f'{num}: {sentence}')\n",
-    "    calcVerb(num,sentence)"
    ]
   },
   {
