--- a/script.ipynb
+++ b/script.ipynb
@@ -20,6 +20,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import spacy\n",
+    "from spacy.matcher import Matcher\n",
+    "\n",
+    "nlp = spacy.load('en_core_web_sm')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -28,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -201,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -214,11 +226,6 @@
     }
    ],
    "source": [
-    "import spacy\n",
-    "from spacy.matcher import Matcher\n",
-    "\n",
-    "nlp = spacy.load('en_core_web_sm')\n",
-    "\n",
     "\"\"\"\n",
     "Active = \"Harry ate six shrimp at dinner.\\\n",
     "Beautiful giraffes roam the savannah.\\\n",
@@ -417,6 +424,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 6. Tense"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#PRESENT PERFECT CONTINUOUS\n",
+    "from spacy.matcher import Matcher\n",
+    "\n",
+    "def on_matchppct(matcher, doc, id, matches):\n",
+    "        print(\"PRESENT PERFECT CONTINUOUS\")\n",
+    "matcher = Matcher(nlp.vocab)\n",
+    "matcher.add('PPCT',on_matchppct,[{\"LOWER\": \"has\"},{\"LOWER\": \"been\"},{'TAG':'VBG'}])\n",
+    "matcher.add('PPCT',on_matchppct,[{\"LOWER\": \"have\"},{\"LOWER\": \"been\"},{'TAG':'VBG'}])\n",
+    "\n",
+    "#PRESENT PERFECT\n",
+    "def on_matchppt(matcher, doc, id, matches):\n",
+    "        print(\"Present perfect\")\n",
+    "matcher.add('PPT',on_matchppt,[{\"LOWER\": \"has\"},{'DEP':'neg','OP':'?'},{'DEP':'nsubj','OP':'?'},{'TAG':'VBN'}])\n",
+    "matcher.add('PPT',on_matchppt,[{\"LOWER\": \"have\"},{'DEP':'neg','OP':'?'},{'DEP':'nsubj','OP':'?'},{'TAG':'VBN'}])\n",
+    "\n",
+    "#PRESENT CONTINUOUS\n",
+    "def on_matchpc(matcher, doc, id, matches):\n",
+    "        print(\"PRESENT CONTINUOUS\")\n",
+    "matcher.add('PCTense',on_matchpc,[{\"LOWER\": \"is\"},{'TAG':'VBG'}])\n",
+    "matcher.add('PCTense',on_matchpc,[{\"LOWER\": \"am\"},{'TAG':'VBG'}])\n",
+    "matcher.add('PCTense',on_matchpc,[{\"LOWER\": \"are\"},{'TAG':'VBG'}])\n",
+    "\n",
+    "#Sample sentence\n",
+    "doc=nlp(\"Any sentence\")\n",
+    "matches = matcher(doc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 9. Emoji\n",
     "\n",
     "Using the python package \"spacymoji\"\n",
@@ -425,19 +472,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'nlp' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-3-893103dbd39e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mspacymoji\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mEmoji\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0memoji\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mEmoji\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnlp\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[1;31m#nlp.add_pipe(emoji, first=True)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0mdoc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnlp\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mu\"This is a test 😻 👍🏿\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'nlp' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "\"assert doc[2:5]._.has_emoji == True\\nassert doc[0]._.is_emoji == False\\nassert doc[4]._.is_emoji == True\\nassert doc[5]._.emoji_desc == u'thumbs up dark skin tone'\\nassert len(doc._.emoji) == 2\\nassert doc._.emoji[1] == (u'👍🏿', 5, u'thumbs up dark skin tone')\""
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -466,21 +512,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'keras'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-fae64320efc4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mcytoolz\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 23\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmodels\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mSequential\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmodel_from_json\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     24\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlayers\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mLSTM\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mDense\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mEmbedding\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mBidirectional\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlayers\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mTimeDistributed\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'keras'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "This example shows how to use an LSTM sentiment classification model trained\n",
@@ -748,44 +782,8 @@
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    plac.call(main)\n",
-    "    "
+    "    plac.call(main)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#PRESENT PERFECT CONTINUOUS\n",
-    "from spacy.matcher import Matcher\n",
-    "def on_matchppct(matcher, doc, id, matches):\n",
-    "        print(\"PRESENT PERFECT CONTINUOUS\")\n",
-    "matcher = Matcher(nlp.vocab)\n",
-    "matcher.add('PPCT',on_matchppct,[{\"LOWER\": \"has\"},{\"LOWER\": \"been\"},{'TAG':'VBG'}])\n",
-    "matcher.add('PPCT',on_matchppct,[{\"LOWER\": \"have\"},{\"LOWER\": \"been\"},{'TAG':'VBG'}])\n",
-    "#PRESENT PERFECT\n",
-    "def on_matchppt(matcher, doc, id, matches):\n",
-    "        print(\"Present perfect\")\n",
-    "matcher.add('PPT',on_matchppt,[{\"LOWER\": \"has\"},{'DEP':'neg','OP':'?'},{'DEP':'nsubj','OP':'?'},{'TAG':'VBN'}])\n",
-    "matcher.add('PPT',on_matchppt,[{\"LOWER\": \"have\"},{'DEP':'neg','OP':'?'},{'DEP':'nsubj','OP':'?'},{'TAG':'VBN'}])\n",
-    "#PRESENT CONTINUOUS\n",
-    "def on_matchpc(matcher, doc, id, matches):\n",
-    "        print(\"PRESENT CONTINUOUS\")\n",
-    "matcher.add('PCTense',on_matchpc,[{\"LOWER\": \"is\"},{'TAG':'VBG'}])\n",
-    "matcher.add('PCTense',on_matchpc,[{\"LOWER\": \"am\"},{'TAG':'VBG'}])\n",
-    "matcher.add('PCTense',on_matchpc,[{\"LOWER\": \"are\"},{'TAG':'VBG'}])\n",
-    "doc=nlp(\"Any sentence\")\n",
-    "matches = matcher(doc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
