--- a/script.ipynb
+++ b/script.ipynb
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -754,9 +754,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PAST PERFECT\n"
+     ]
+    }
+   ],
    "source": [
     "#PRESENT PERFECT CONTINUOUS\n",
     "from spacy.matcher import Matcher\n",
@@ -776,7 +784,11 @@
     "matcher.add('PCTense',on_matchpc,[{\"LOWER\": \"is\"},{'TAG':'VBG'}])\n",
     "matcher.add('PCTense',on_matchpc,[{\"LOWER\": \"am\"},{'TAG':'VBG'}])\n",
     "matcher.add('PCTense',on_matchpc,[{\"LOWER\": \"are\"},{'TAG':'VBG'}])\n",
-    "doc=nlp(\"Any sentence\")\n",
+    "#PAST PERFECT\n",
+    "def on_match_pastperf(matcher, doc, id, matches):\n",
+    "    print(\"PAST PERFECT\")\n",
+    "matcher.add('PASTPERF',on_match_pastperf,[{\"LOWER\":\"had\"},{'DEP':'neg','OP':'?'},{'DEP':'nsubj','OP':'?'},{'POS':'ADV','OP':'?'},{'TAG':'VBN'}])\n",
+    "doc=nlp(\"My friends had never gone to the USA either\")\n",
     "matches = matcher(doc)"
    ]
   },
@@ -804,7 +816,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8rc1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
